# uTracker

./: .env.example  .flake8  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  pyrightconfig.json  ruff.toml  utracker.db
app/: main.py
app/db/: features.py  models.py  session.py  settings.py
app/routes/: cards.py  fighters.py  fights.py  picks.py  services.py
app/schemas/: cards.py  fighters.py  fights.py  picks.py
app/services/: api_services.py  cards.py  fighters.py  fights.py  map_features.py  predictor.py
app/tests/: conftest.py  test_get_fighters.py  test_get_fighters.sh  test_post_fighters.py  test_post_fighters.sh
pytorch/: predictor_meta.json  utracker.ipynb
templates/: base.html  index.html
templates/cards/: create.html  delete.html  get.html  list.html  not_found.html
templates/fighters/: create.html  get.html  list.html  not_found.html  update.html
templates/fights/: create.html  delete.html  detail.html  edit.html  get.html  list.html  not_found.html  update.html
