[project]
name = "utracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.8.1",
    "pytest>=8.4.1",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.40",
]

[tool.black]
line-length = 160
target-version = ['py313']  
skip-string-normalization = false  
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''
